--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@callstack/react-theme-provider": "^3.0.3",
     "antd": "^3.21.0",
     "atomize": "^1.0.4",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.12",
+    "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.2",
-    "serve": "^11.1.0"
+    "serve": "^11.1.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
