--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.6.0",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.2",
     "serve": "^11.1.0",
