--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.2",
     "serve": "^11.1.0",
