--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-circular-progressbar": "^2.0.2",
+    "react-cookie-consent": "^3.0.0",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
     "react-router-dom": "^5.1.2",
