--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@callstack/react-theme-provider": "^3.0.3",
     "antd": "^3.21.0",
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-circular-progressbar": "^2.0.2",
