--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@callstack/react-theme-provider": "^3.0.3",
     "antd": "^3.21.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.12",
+    "react-bootstrap": "^1.3.0",
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
