--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.3.0",
     "react-circular-progressbar": "^2.0.2",
