--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@callstack/react-theme-provider": "^3.0.3",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "antd": "^3.21.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
