--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
     "styled-components": "^4.3.2"
   },
   "scripts": {
-      "start": "node server",
-      "dev": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject",
-      "lint": "eslint ./src"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
