--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "styled-components": "^4.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+      "start": "node server",
+      "dev": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "lint": "eslint ./src"
   },
   "eslintConfig": {
     "extends": "react-app"
