--- a/package.json
+++ b/package.json
@@ -10,32 +10,36 @@
   "dependencies": {
     "@callstack/react-theme-provider": "^3.0.3",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "antd": "^3.21.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "is-whitespace-character": "^2.0.0",
     "node-sass": "^4.14.1",
+    "prismjs": "^1.25.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.3.0",
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
-    "react-markdown": "^4.3.1",
+    "react-markdown": "7.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "react-syntax-highlighter": "^15.4.4",
     "react-transition-group": "^4.2.2",
     "serve": "^11.1.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
-      "start": "node server",
-      "dev": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject",
-      "lint": "eslint ./src"
+    "start": "node server",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src"
   },
   "eslintConfig": {
     "extends": "react-app"
